clusters/homelab/apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.20.3.3483-211702a9f-ls122 # {"$imagepolicy": "flux-system:plex"}
          ports:
            - containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            limits:
              memory: "2Gi"
          startupProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 36
          readinessProbe:
            tcpSocket:
              port: 32400
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media
          persistentVolumeClaim:
            claimName: media-library
